MIC-30: Read display card api implementation
