# docs/swagger.json
@@ -55,7 +55,7 @@
                                         "errorTypes": {
                                             "type": "array",
                                             "items": {
-                                                "type": "string"
+                                                "type": "integer"
                                             }
                                         }
                                     }
@@ -76,7 +76,69 @@
                                         "errorTypes": {
                                             "type": "array",
                                             "items": {
-                                                "type": "string"
+                                                "type": "integer"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/readdisplaycard": {
+            "get": {
+                "description": "It will collect primary data for display card for a product",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Read data for display card for a product",
+                "operationId": "read-display-card-product",
+                "parameters": [
+                    {
+                        "description": "Id of a product",
+                        "name": "Id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "250": {
+                        "description": "Display card data of a product",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "type": "object"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "product": {
+                                            "type": "object"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "251": {
+                        "description": "No product found with this id",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "type": "object"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "errorTypes": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "integer"
                                             }
                                         }
                                     }
