# routes/product.go
@@ -1,7 +1,11 @@
 package routes
 
 import (
+	"strconv"
+
 	"github.com/gin-gonic/gin"
+
+	routesinterface "product-service/routes/interfaces"
 
 	"product-service/data"
 	"product-service/logics"
@@ -9,6 +13,7 @@ import (
 
 func ProductsRoutes(router *gin.Engine) {
 	router.POST("/create", create)
+	router.GET("/readdisplaycard", readDisplayCard)
 }
 
 // @Summary Create a product
@@ -19,15 +24,19 @@ func ProductsRoutes(router *gin.Engine) {
 // @Param displayId body string true "DisplayId of a product"
 // @Param name body string true "Name of a product"
 // @Param description body string true "Description of a product"
-// @Success 250 {object} object{errorTypes=[]string} "A product is created. ErrorTypes array will be empty."
-// @success 251 {object} object{errorTypes=[]string} "All ready a product with displayId or name. ErrorType{1 => displayId, 2 => name}"
+// @Success 250 {object} object{errorTypes=[]int} "A product is created. ErrorTypes array will be empty."
+// @success 251 {object} object{errorTypes=[]int} "All ready a product with displayId or name. ErrorType{1 => displayId, 2 => name}"
 func create(c *gin.Context) {
 	var productInfo productInformation
 	if err := c.ShouldBind(&productInfo); err != nil {
-		panic(err)
+		c.JSON(400, gin.H{
+			"message": "Bad Request (Data representation not correct). Please, observe the API doc.",
+		})
+		return
 	}
 
-	createProductLogic := &logics.CreateProductLogic{
+	var createProductLogic routesinterface.ICreateProductLogic
+	createProductLogic = &logics.CreateProductLogic{
 		ProductData: &data.ProductsData{
 			PostgresData: &data.PostgresData{},
 		},
@@ -41,6 +50,52 @@ func create(c *gin.Context) {
 
 	c.JSON(250+statusCode, gin.H{
 		"errorTypes": errorTypes,
+	})
+}
+
+// @Summary Read data for display card for a product
+// @Description It will collect primary data for display card for a product
+// @ID read-display-card-product
+// @Router /readdisplaycard [get]
+// @Accept json
+// @Param Id body int true "Id of a product"
+// @Success 250 {object} object{product=object} "Display card data of a product"
+// @Success 251 {object} object{errorTypes=[]int} "No product found with this id"
+func readDisplayCard(c *gin.Context) {
+	var id int
+	var err error
+
+	if id, err = strconv.Atoi(c.Query("id")); id <= 0 || err != nil {
+		c.JSON(400, gin.H{
+			"message": "Bad Request (Data representation not correct). Please, observe the API doc.",
+		})
+		return
+	}
+
+	var readProductLogic routesinterface.IReadProductLogic
+	readProductLogic = &logics.ReadProductLogic{
+		ProductData: &data.ProductsData{
+			PostgresData: &data.PostgresData{},
+		},
+	}
+
+	readProductLogic.SetId(id)
+	statusCode := readProductLogic.ReadDisplayCard()
+
+	productJson := gin.H{
+		"product": gin.H{},
+	}
+	if readProductLogic.GetId() != 0 {
+		productJson = gin.H{
+			"product": gin.H{
+				"displayId": readProductLogic.GetDisplayId(),
+				"name":      readProductLogic.GetName(),
+			},
+		}
+	}
+
+	c.JSON(251+statusCode, gin.H{
+		"product": productJson,
 	})
 }
 
